tests/baselines/reference/logicalNotOperatorInvalidOperations.errors.txt
==== tests/cases/compiler/logicalNotOperatorInvalidOperations.ts (4 errors) ====
    // Unary operator !
    var b: number;
    
    // operand before !
    var BOOLEAN1 = b!;  //expect error
                    ~
!!! error TS1005: ',' expected.
                     ~
!!! error TS1003: Identifier expected.
    
    // miss parentheses
    var BOOLEAN2 = !b + b;
                   ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    // miss an operand
    var BOOLEAN3 =!;
                   ~
!!! error TS1003: Identifier expected.